Updated to the all uppercase MediaType enum

--- a/src/pages/sources/sources.html
+++ b/src/pages/sources/sources.html
@@ -23,7 +23,7 @@
                             <ion-label floating>Media Type</ion-label>
                             <ion-select [(ngModel)]="source.mediaType">
                                 <ng-container *ngFor="let mediaType of mediaTypes">
-                                    <ion-option *ngIf="mediaType !== 'TvEpisode'" [value]="mediaType">{{mediaType}}</ion-option>
+                                    <ion-option [value]="mediaType.value">{{mediaType.title}}</ion-option>
                                 </ng-container>
                             </ion-select>
                         </ion-item>
