Fixed out-of-sync field names for metadata fetching.

--- a/src/pages/movie-metadata/movie-metadata.html
+++ b/src/pages/movie-metadata/movie-metadata.html
@@ -86,7 +86,7 @@
             <metadata-compare-row [comparison]="comparison" property="runtime" label="Runtime (minutes)" type="text"></metadata-compare-row>
             <metadata-compare-row [comparison]="comparison" property="genres" type="stringlist"></metadata-compare-row>
             <metadata-compare-row [comparison]="comparison" property="keywords" type="stringlist"></metadata-compare-row>
-            <metadata-compare-row [comparison]="comparison" property="searchText" type="stringlist"></metadata-compare-row>
+            <metadata-compare-row [comparison]="comparison" property="extraSearchText" type="stringlist"></metadata-compare-row>
             <metadata-compare-row [comparison]="comparison" property="posterUrls" label="Poster" type="poster"></metadata-compare-row>
             <metadata-compare-row [comparison]="comparison" property="backdropUrls" label="Backdrops" type="imagelist"></metadata-compare-row>
         </ion-grid>
