Updated api to use movie metadata mutation

--- a/src/pages/movie-metadata/movie-metadata.html
+++ b/src/pages/movie-metadata/movie-metadata.html
@@ -83,7 +83,7 @@
             <metadata-compare-row [comparison]="comparison" property="collectionOrder" type="text"></metadata-compare-row>
             <metadata-compare-row [comparison]="comparison" property="rating" type="text"></metadata-compare-row>
             <metadata-compare-row [comparison]="comparison" property="releaseDate" type="date"></metadata-compare-row>
-            <metadata-compare-row [comparison]="comparison" property="runtime" label="Runtime (minutes)" type="text"></metadata-compare-row>
+            <metadata-compare-row [comparison]="comparison" property="RuntimeSeconds" label="Runtime (minutes)" type="text"></metadata-compare-row>
             <metadata-compare-row [comparison]="comparison" property="genres" type="stringlist"></metadata-compare-row>
             <metadata-compare-row [comparison]="comparison" property="keywords" type="stringlist"></metadata-compare-row>
             <metadata-compare-row [comparison]="comparison" property="extraSearchText" type="stringlist"></metadata-compare-row>
