--- a/src/pages/movie-info/movie-info.html
+++ b/src/pages/movie-info/movie-info.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content relative>
-    <ng-container *ngIf="movie">
+    <div *ngIf="movie" max-width>
         <h1 class="title">{{movie.title}}</h1>
         <div class="various-info" text-center>
             <ng-container inline-block v-center *ngIf="movie.releaseDate">{{movie.releaseDate | date:'y'}} </ng-container>
@@ -29,5 +29,5 @@
         <p>{{movie.description? movie.description: 'No description available'}}</p>
         <button ion-button [movieMetadataClick]="movie">Manage Metadata</button>
         <button ion-button [mediaItemProcessClick]="movie">Process Movie</button>
-    </ng-container>
+    </div>
 </ion-content>
