--- a/src/pages/movie-metadata/movie-metadata.html
+++ b/src/pages/movie-metadata/movie-metadata.html
@@ -89,7 +89,7 @@
             <metadata-compare-row [comparison]="comparison" property="genres" type="stringlist"></metadata-compare-row>
             <metadata-compare-row [comparison]="comparison" property="keywords" type="stringlist"></metadata-compare-row>
             <metadata-compare-row [comparison]="comparison" property="extraSearchText" type="stringlist"></metadata-compare-row>
-            <metadata-compare-row [comparison]="comparison" property="posterUrls" label="Poster" type="poster"></metadata-compare-row>
+            <metadata-compare-row [comparison]="comparison" property="posterUrls" label="Posters" type="imagelist"></metadata-compare-row>
             <metadata-compare-row [comparison]="comparison" property="backdropUrls" label="Backdrops" type="imagelist"></metadata-compare-row>
         </ion-grid>
         <button ion-fab class="save" color="primary" (click)="save()">
